--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </header>
 
     <main>
-        <p name="item"></p>
+        <form action="/" method="post">
+            <p name="text"></p>
+        </form>
     </main>
 
 
