--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </header>
 
     <main>
-        <form action="/" method="post">
-            <p name="text"></p>
-        </form>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
+         <button>
+             click me
+         </button>
     </main>
 
 
