--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
+        <span id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
          <button>
              click me
          </button>
