--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <span id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
-         <button>
+         <button id="button">
              click me
          </button>
     </main>
