--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </header>
 
     <main>
-        <span id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
-         <button id="button">
-             click me
-         </button>
+        <div>
+            <span id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
+        </div>
+        <button id="button">GET ADVICE</button>
     </main>
 
 
-    
+    <script src="./public/script/script.js"></script>
 </body>
 </html>
