--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <div>
-            <span id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sint nisi repellendus magni dolorum doloribus nulla praesentium repellat tenetur! Iure ipsam magnam impedit! Nisi accusamus, corporis quidem ad a doloremque.</p>
+            <span id="text">.</p>
         </div>
         <button id="button">GET ADVICE</button>
     </main>
